# TampermonkeyScripts

./: .gitignore  Arch.drawio.xml  av.py  check_file.py  cleanup_backup_video.py  cleanup_dup.py  cleanup_nas.py  comic.py  comic_viewr.py  convert_eyny_vid.py  crlf2lf.ps1  export_eyny.ps1  eyny_url_download.py  file_attr.py  file_translate.py  get_message_history_tg_channel.py  house_keeping.py  housekeep_video.py  ig.py  ig_media_id.json  ig_reels_download.py  ig_url_download.py  overview_files.py  package-lock.json  playground.py  pyproject.toml  requirements.txt  run_accounting.bat  run_convert.bat  run_eyny.bat  run_ig.bat  run_ig_reels.bat  run_insta.bat  search_av.py  send_video_to_tg_channel.py  threads_sample.py  tweets.py
StreamBot/: __init__.py  download_bot.py  downloader.py  enums.py  models.py  utils.py
handlers/: base.py  mongo.py
js/: eyny.js  eyny.ts  eyny_article.js  instagram.js  instagram.ts  jkf_article.js  test.js  test.ts  threads.js
models/: base.py  enums.py  ig_feed_user.py  ig_reels.py  ig_reels_tray.py  ig_user_profile.py  ig_username.py  logger.py
notebook/: face_align.ipynb
sample/: eyny_bot_[繁體中文]_[合集] [AT-X] [無修正] [無刪減]_20221014_vid_ee9686596d9b57d26ccfa227f590fca9.mp4.txt
scripts/: crlf2lf.ps1  export_eyny.ps1  export_ig.ps1  run_download2txt.ps1  run_eyny.ps1  run_ig.ps1  run_ig_reels.bat
utils/: __init__.py  download2txt.py  eyny_download.py  file_translate.py  general.py  generate_arch.py  instagram.py  mongo_op.py
viewer/: 18comic_download.js  comic.html  comic.py  merge_comic.py  package-lock.json  package.json  (+2 more)
(+7 files in other folders)
